test/algeff/wrong/type1.kk.out
test/algeff/wrong/type1.kk(10, 5): error: types do not match (due to an infinite type)
 context : flip()
 term : flip()
 inferred type: list<list<_a>>
 expected type: list<_a>
 because : function returns values of different types
 hint : annotate the function definition?